# Copyright 2001,2002,2003,2004 Sun Microsystems, Inc.
# All Rights Reserved.  Use is subject to license terms.
# 
# See the file "license.terms" for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL 
# WARRANTIES.
#

Change history for FreeTTS.
--------------------------

XXXX,XX, 2004 Release 1.2XXX
    - Added importing tools specifically for CMU ARCTIC Voices.
    - Fixed problem in mbrola phonem remapping.
    - In the Voice class, removed the call to AudioPlayer.drain() 
      if the audio is cancelled, since it will block until the next audio
      is available.
    - Fixed problem in FreeTTSSynthesizer where in some cases waiting 
      threads are not notified when a queue item is cancelled.
    - Made the JavaStreamingAudioPlayer.cancel() method unsynchronized
      so that audio output can be stopped immediately.
    - Added rudimentary internationalization to Festvox import.
      This imports international (non-US-English) cluster unit voices,
      but obviously still lacks a lexicon and other NLP components for
      new languages.

June 15, 2004 Release 1.2beta2
    - Added experimental CMUArcticVoice that may (or may not) work
      with the CMU ARCTIC databases.
    - Added CMUTimeVoice, which has noop post lexical processing
      to support the FestVox limited domain time voice scheme.
      Modified FestVoxToFreeTTS to use this voice in the template.
    - Restructured cluster unit voice for simple extensions.
    - Added com.sun.speech.freetts.lexicon.userAddenda property
    - Added FreeTTS pronunciation to addenda
    - Fix problem where the space character in the path would cause
      issues with finding voice jars (bug 938225)
    - Added backwards compatibility for Gnome Speech API
    - Fix to kill audio output thread on deallocate from JSAPI (bug 922579)
    - Added "@" and "?" to list of known characters for German.
    - Fixed problem where some jar files in the FreeTTS directory